--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.3
 Flask-SocketIO==5.3.6
+python-socketio==5.14.3
+python-engineio==4.12.3
 eventlet==0.36.1
 gunicorn==22.0.0
 Werkzeug==3.0.3
-Pillow==10.4.0
