--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -k eventlet -w 1 "web_messenger:create_app()"
+    startCommand: python web_messenger.py
     envVars:
-      PYTHON_VERSION: 3.13
+      - key: SECRET_KEY
+        generateValue: true
