--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==3.0.3
-Flask-SocketIO==5.3.6
-python-socketio==5.14.3
-python-engineio==4.12.3
-Werkzeug==3.0.3
+flask==2.3.3
+flask-socketio==5.3.6
+python-socketio==5.10.0
+werkzeug==2.3.7
+eventlet==0.33.3
