--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,4 @@ flask==2.3.3
 flask-socketio==5.3.6
 python-socketio==5.10.0
 werkzeug==2.3.7
-gevent==23.9.1
-greenlet==3.0.3
+simple-websocket==1.1.0
