--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# requirements.txt
-flask==2.3.3
-flask-socketio==5.3.6
-python-socketio==5.10.0
-werkzeug==2.3.7
-simple-websocket==1.1.0
+Flask==2.3.3
+Flask-SocketIO==5.3.4
+python-socketio==5.9.0
+eventlet==0.33.3
+Werkzeug==2.3.7
