--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,10 @@ services:
   - type: web
     name: tandau-messenger
     env: python
-    plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python web_messenger.py
+    startCommand: gunicorn --worker-class eventlet -w 1 web_messenger:app
     envVars:
       - key: SECRET_KEY
         generateValue: true
+      - key: PYTHON_VERSION
+        value: 3.11.0
