--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.3
 Flask-SocketIO==5.3.4
 python-socketio==5.9.0
-python-engineio==4.6.1
+python-engineio==4.6.0
 eventlet==0.33.3
 Werkzeug==2.3.7
+gunicorn==21.2.0
