--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: tandau-messenger
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --worker-class eventlet -w 1 web_messenger:app
+    startCommand: gunicorn --worker-class eventlet -w 1 app:app
     envVars:
       - key: SECRET_KEY
         generateValue: true
