--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.3.3
-Flask-SocketIO==5.3.4
+Flask-SocketIO
 python-engineio==4.7.0
-python-socketio==5.9.0
-eventlet==0.33.3
+python-socketio
+eventlet
 simple-websocket==1.0.0
+
 
