--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,3 @@
-flask==3.0.3
-Flask-SocketIO
-python-engineio==4.7.0
-python-socketio==5.11.0
-eventlet==0.36.1  
-simple-websocket==1.0.0
-flask-socketio==5.4.0
-
-
-
-
+Flask==3.0.3
+Flask-SocketIO==5.6.0
+eventlet==0.36.1
